# pjecz-casiopea-api-oauth2

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pyproject.toml.poetry  requirements.txt
pjecz_casiopea_api_oauth2/: main.py  settings.py
pjecz_casiopea_api_oauth2/config/: settings.py
pjecz_casiopea_api_oauth2/dependencies/: authentications.py  database.py  pwgen.py  redis.py
pjecz_casiopea_api_oauth2/models/: autoridades.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_servicios.py  distritos.py  domicilios.py  materias.py  oficinas.py
pjecz_casiopea_api_oauth2/routers/: autoridades.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_disponibles.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_horas_disponibles.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  exp_juzgados.py  materias.py  oficinas.py
pjecz_casiopea_api_oauth2/schemas/: autoridades.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_disponibles.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  materias.py  oficinas.py
pjecz_casiopea_api_oauth2/services/: codigo_barras.py  sendmail.py
pjecz_casiopea_api_oauth2/templates/email/: cita_cancelada.jinja2  cita_creada.jinja2  (+4 more)
sql/: v1.4.0-01-anadir-campo-codigo_barras.sql
